--- a/.bowerrc
+++ b/.bowerrc
@@ -1,6 +1,3 @@
 {
-  "directory": "bower_components",
-  "scripts": {
-      "postinstall": "./.bower-postinstall"
-  }
+  "directory": "bower_components"
 }
